test/e2e/alcotest/passing/empty_test_name.ml
let () =
  Alcotest.run "<suite-name>"
    [ ("", [ Alcotest.test_case "1" `Quick (fun () -> ()) ]) ]
